--- a/BLAZAM/Pages/Computers/ViewComputer.razor
+++ b/BLAZAM/Pages/Computers/ViewComputer.razor
@@ -338,7 +338,7 @@
                     
 
                     EditMode = false;
-                    Nav.WarnOnNavigation = false;
+                    //Nav.WarnOnNavigation = false;
                     SnackBarService.Success("The changes made to this computer have been saved.");
                     await RefreshEntryComponents();
                 }
