--- a/BLAZAM/Pages/Groups/ViewGroup.razor
+++ b/BLAZAM/Pages/Groups/ViewGroup.razor
@@ -177,7 +177,7 @@
                 //_ = OUNotificationService.PostAsync(Group, NotificationType.Modify);
 
                 EditMode = false;
-                Nav.WarnOnNavigation = false;
+                //Nav.WarnOnNavigation = false;
                 SnackBarService.Success("The changes made to this group have been saved.");
             }
             else
