--- a/BLAZAMGui/UI/Dev/DevTools.razor
+++ b/BLAZAMGui/UI/Dev/DevTools.razor
@@ -55,12 +55,27 @@
                 <PropertyColumn Title="Session Expiration Time" Property="x => x.Ticket==null?null:(DateTimeOffset.UtcNow-x.Ticket.Properties.ExpiresUtc)" />
 
 
-               
 
-                <PropertyColumn Title="Has User Priv" Property="x => x.HasUserPrivilege.ToString()" />
-                <PropertyColumn Title="Has Group Priv" Property="x => x.HasGroupPrivilege.ToString()" />
-                <PropertyColumn Title="Has OU Priv" Property="x => x.HasOUPrivilege.ToString()" />
-                <PropertyColumn Title="Has Computer Priv" Property="x => x.HasComputerPrivilege.ToString()" />
+                <TemplateColumn Title="Has User Priv">
+                    <CellTemplate>
+                        @context.Item.HasUserPrivilege
+                    </CellTemplate>
+                </TemplateColumn>
+                <TemplateColumn Title="Has Group Priv">
+                    <CellTemplate>
+                        @context.Item.HasGroupPrivilege
+                    </CellTemplate>
+                </TemplateColumn>
+                <TemplateColumn Title="Has OU Priv">
+                    <CellTemplate>
+                        @context.Item.HasOUPrivilege
+                    </CellTemplate>
+                </TemplateColumn>
+                <TemplateColumn Title="Has Computer Priv">
+                    <CellTemplate>
+                        @context.Item.HasComputerPrivilege
+                    </CellTemplate>
+                </TemplateColumn>
             </Columns>
         </MudDataGrid>
 
