--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -29,8 +29,15 @@
                          SortMode="@SortMode.Multiple"
                          Groupable="false">
                 <Columns>
-                    <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" Sortable="true" />
-                    <PropertyColumn Property="x => x.Username" Filterable="true"/>
+                    @* <PropertyColumn Property="x => x.Timestamp.ToLocalTime()"   Sortable="true" /> *@
+                    <TemplateColumn Title=@AppLocalization["Timestamp"] Sortable="true">
+                        <CellTemplate>
+                            <MudText>
+                                @context.Item.Timestamp.ToLocalTime()
+                            </MudText>
+                        </CellTemplate>
+                    </TemplateColumn>
+                    <PropertyColumn Property="x => x.Username" Filterable="true" />
                     <PropertyColumn Property="x => x.IpAddress" Filterable="true" />
                     <PropertyColumn Property="x => x.Action" Filterable="true" />
                     <TemplateColumn>
@@ -38,7 +45,7 @@
                             <MudLink Href="@("/view/"+context.Item.Target)">@context.Item.Target</MudLink>
                         </CellTemplate>
                     </TemplateColumn>
-                    <PropertyColumn Property="x => x.BeforeAction"  Filterable="true" />
+                    <PropertyColumn Property="x => x.BeforeAction" Filterable="true" />
                     <PropertyColumn Property="x => x.AfterAction" Filterable="true" />
 
                 </Columns>
@@ -55,7 +62,7 @@
     <MudTabPanel>
         <ChildContent>
             <LoginHistoryChart />
-           
+
 
             <MudDataGrid Virtualize=true
                          Height="600px"
@@ -67,7 +74,14 @@
                          SortMode="@SortMode.Multiple"
                          Groupable="false">
                 <Columns>
-                    <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" />
+                    @* <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" /> *@
+                    <TemplateColumn Title=@AppLocalization["Timestamp"] Sortable="true">
+                        <CellTemplate>
+                            <MudText>
+                                @context.Item.Timestamp.ToLocalTime()
+                            </MudText>
+                        </CellTemplate>
+                    </TemplateColumn>
                     <PropertyColumn Property="x => x.Username" />
                     <PropertyColumn Property="x => x.IpAddress" />
                     <PropertyColumn Property="x => x.Action" />
@@ -85,7 +99,7 @@
     </MudTabPanel>
     <MudTabPanel>
         <ChildContent>
-            @if(ApplicationInfo.InDemoMode && CurrentUser.Username == "Demo")
+            @if (ApplicationInfo.InDemoMode && CurrentUser.Username == "Demo")
             {
                 <MudText>Disabled in demo</MudText>
             }
@@ -101,7 +115,14 @@
                              SortMode="@SortMode.Multiple"
                              Groupable="false">
                     <Columns>
-                        <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" />
+                        @* <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" /> *@
+                        <TemplateColumn Title=@AppLocalization["Timestamp"] Sortable="true">
+                            <CellTemplate>
+                                <MudText>
+                                    @context.Item.Timestamp.ToLocalTime()
+                                </MudText>
+                            </CellTemplate>
+                        </TemplateColumn>
                         <PropertyColumn Property="x => x.Username" />
                         <PropertyColumn Property="x => x.IpAddress" />
                         <PropertyColumn Property="x => x.Target" />
@@ -113,7 +134,7 @@
                     </Columns>
                 </MudDataGrid>
             }
-         
+
 
 
 
@@ -128,7 +149,7 @@
 </MudTabs>
 
 
-            @code {
+@code {
     List<LogonAuditLog> logonEntries = new();
     List<DirectoryEntryAuditLog> auditEntries = new();
     List<SystemAuditLog> systemAuditEntries = new();
@@ -146,10 +167,10 @@
 
 
 
-           
+
         }
 
 
     }
-   
+
 }
