--- a/BLAZAMGui/UI/Dev/DevTools.razor
+++ b/BLAZAMGui/UI/Dev/DevTools.razor
@@ -2,8 +2,8 @@
 @inherits AppComponentBase
 @inject IHttpContextAccessor ca
 
-<MudPaper Class="mud-theme-dark py-3" Width="250px" Elevation="0">
-    <MudNavMenu Color="Color.Success" Bordered="true">
+@* <MudPaper Class="mud-theme-dark py-3" Width="250px" Elevation="0">
+    <MudNavMenu Color="Color.Success" Bordered="true"> *@
 
 
         <MudText Typo="Typo.h6">Dev Tools</MudText>
@@ -125,8 +125,8 @@
             </Row>
         </MudCard>
 
-    </MudNavMenu>
-</MudPaper>
+@*     </MudNavMenu>
+</MudPaper> *@
 
 @code {
     string DirectoryStatus = "";
