--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -38,7 +38,23 @@
                         </CellTemplate>
                     </TemplateColumn>
                     <PropertyColumn Property="x => x.Username" Filterable="true" />
-                    <PropertyColumn Property="x => x.IpAddress" Filterable="true" />
+                    <TemplateColumn Title=@AppLocalization["Ip Address"] Filterable="true">
+                        <CellTemplate>
+                            @if (ApplicationInfo.InDemoMode && !CurrentUser.Username.Equals("admin", StringComparison.InvariantCultureIgnoreCase))
+                            {
+                                <MudText Style="filter:blur(4px);">
+                                    10.20.30.40
+                                </MudText>
+                            }
+                            else
+                            {
+                                <MudText>
+                                    @context.Item.IpAddress
+                                </MudText>
+                            }
+
+                        </CellTemplate>
+                    </TemplateColumn>
                     <PropertyColumn Property="x => x.Action" Filterable="true" />
                     <TemplateColumn>
                         <CellTemplate>
@@ -83,7 +99,24 @@
                         </CellTemplate>
                     </TemplateColumn>
                     <PropertyColumn Property="x => x.Username" />
-                    <PropertyColumn Property="x => x.IpAddress" />
+
+                    <TemplateColumn Title=@AppLocalization["Ip Address"] Filterable="true">
+                        <CellTemplate>
+                            @if (ApplicationInfo.InDemoMode && !CurrentUser.Username.Equals("admin", StringComparison.InvariantCultureIgnoreCase))
+                            {
+                                <MudText Style="filter:blur(4px);">
+                                    10.20.30.40
+                                </MudText>
+                            }
+                            else
+                            {
+                                <MudText>
+                                    @context.Item.IpAddress
+                                </MudText>
+                            }
+                           
+                        </CellTemplate>
+                    </TemplateColumn>
                     <PropertyColumn Property="x => x.Action" />
 
                 </Columns>
