--- a/BLAZAMGui/UI/Dashboard/Widgets/Admin/AppLogonsWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/Admin/AppLogonsWidget.razor
@@ -20,10 +20,22 @@
             <CellTemplate>
                             <MudText>@context.Item?.Username</MudText>
             </CellTemplate>
-        </TemplateColumn> 
-        <TemplateColumn Title="IP">
+        </TemplateColumn>
+        <TemplateColumn Title=@AppLocalization["Ip Address"] Sortable="true">
             <CellTemplate>
-                            <MudText>@context.Item?.IpAddress</MudText>
+                @if (ApplicationInfo.InDemoMode && !CurrentUser.Username.Equals("admin", StringComparison.InvariantCultureIgnoreCase))
+                {
+                    <MudText Style="filter:blur(4px);">
+                        10.20.30.40
+                    </MudText>
+                }
+                else
+                {
+                    <MudText>
+                        @context.Item.IpAddress
+                    </MudText>
+                }
+
             </CellTemplate>
         </TemplateColumn>
         <TemplateColumn Title="Logged On">
